# DataBot

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: chatbot.rst  conf.py  index.rst  installation.rst  tests.rst  utils.rst
src/dataviz/: app.py  chat.py  utils.py
tests/: test_Datachatbot.py  test_clean_dataset.py
